syntax = "proto3";

package bp;

import "user.proto";

option go_package = "github.com/ShenPingYuan/go-webdemo/bp";

message LoginUserRequest {
    string username=1;
    string password=4;
}

message LoginUserResponse{
    User user=1;
    string access_token=2;
    string refresh_token=3;
}

