syntax = "proto3";

package bp;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/ShenPingYuan/go-webdemo/bp";

service SimpleBank{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){}
}